5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1800_2567.log
== SUBMITION (2019-06-12 23:11:06) 
-- CODE:
from numpy import*
[base = eval(input("Tamanho da base: "))

for j in range(0, base):
	for i in range(0, base - j):
		print("*", end="")
	print("\n", end="")
for j in range(0, base):
	for i in range(0, 1 + j):
		print("*", end="")
	print("\n", end="")]
-- EXECUTION TIME:
0.635562
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 2
    [base = eval(input())
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:11:40) 
-- CODE:
from numpy import*
base = eval(input("Tamanho da base: "))

for j in range(0, base):
	for i in range(0, base - j):
		print("*", end="")
	print("\n", end="")
for j in range(0, base):
	for i in range(0, 1 + j):
		print("*", end="")
	print("\n", end="")]
-- EXECUTION TIME:
0.654026
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 11
    print("\n", end="")]
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:44) 
-- CODE:
from numpy import*
base = eval(input("Tamanho da base: "))

for j in range(0, base):
	for i in range(0, base - j):
		print("*", end="")
	print("\n", end="")
for j in range(0, base):
	for i in range(0, 1 + j):
		print("*", end="")
	print("\n", end="")]
-- ERROR:
File "XXXX", line 11
    print("\n", end="")]
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:50) 
-- CODE:
from numpy import*
base = eval(input("Tamanho da base: "))

for j in range(0, base):
	for i in range(0, base - j):
		print("*", end="")
	print("\n", end="")
for j in range(0, base):
	for i in range(0, 1 + j):
		print("*", end="")
	print("\n", end="")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:11:58) 
-- CODE:
from numpy import*
base = eval(input("Tamanho da base: "))

for j in range(0, base):
	for i in range(0, base - j):
		print("*", end="")
	print("\n", end="")
for j in range(0, base):
	for i in range(0, 1 + j):
		print("*", end="")
	print("\n", end="")
-- EXECUTION TIME:
1.08987
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
